--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "a": "^3.0.1",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "framer-motion": "^11.11.9",
+    "jwt-decode": "^4.0.0",
     "koi-care-system": "file:",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
