--- a/koi-care-front-end/package.json
+++ b/koi-care-front-end/package.json
@@ -12,6 +12,7 @@
     "a": "^3.0.1",
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.6",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
@@ -20,6 +21,7 @@
     "koi-care-system": "file:",
     "mysql2": "^3.11.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
